- fix bugs:   1. text on banner is hard to see   2. change static img link to relative link   3. use 'em' unit for Media queries

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,10 +1,10 @@
 /* PC */
-@media (min-width : 1024px) {
+@media (min-width : 64em) {
 
 }
 
 /* Tablet & Mobile */
-@media (max-width : 1023px) {
+@media (max-width : 63.9375em) {
     .btn {
         padding: 15px 16px;
     }
@@ -16,6 +16,15 @@
     .model-input,
     .contact-form .form-control {
         padding: 15px;
+        font-size: 16px;
+    }
+
+    .contact-info {
+        line-height: 2;
+    }
+
+    .contact-submit-btn {
+        font-size: 16px;
     }
 
     .social-list {
@@ -30,19 +39,15 @@
         padding: 12px 0;
         display: inline-block;
     }
-
-    .contact-info {
-        line-height: 2;
-    }
 }
 
 /* Tablet */
-@media (min-width : 740px) and (max-width : 1023px) {
+@media (min-width : 46.25em) and (max-width : 63.9375em) {
     
 }
 
 /* Mobile */
-@media (max-width : 739px) {
+@media (max-width : 46.1875em) {
 
     .s-full-width,
     .s-col-full {
