--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,6 +77,8 @@ html {
     display: inline-block;
     margin-top: 15px;
     border: none;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
@@ -207,7 +209,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/ny.jpg') top center / cover no-repeat;
+    background: url('../img/ny.jpg') top center / cover no-repeat;
     position: relative;
 }
 
@@ -240,6 +242,7 @@ html {
 #slider .text-description {
     font-size: 15px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 #content .content-section {
